duniverse/menhirLib.20200211/test/static/bad/semantic.mly
%%

let main :=
  %prec stable

let bar =
  main
