duniverse/menhirLib.20200211/test/static/bad/semantic.exp
File "semantic.mly", line 6, characters 0-3:
Error: syntax error after 'stable' and before 'let'.
A semantic action is expected at this point.
